fixed "prosegui" alignment
kinda hackish, but it should work

--- a/style/style_login.css
+++ b/style/style_login.css
@@ -445,9 +445,12 @@ a{
 
 }
 
-#go{
-
-	
+#go {
+	font-size: 22px;
+	height: 100%;
+	display: block;
+	margin-right: -100px;
+	line-height: 200px;
 }
 
 #intro_foot{
